--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
     
     <!-- Canvas container below header -->
     <div id="canvas-container"></div>
-    <p class="personal-blurb">Software engineer at  interested in security and math.</p>
+    <p class="personal-blurb">Software Engineer at  interested in security and math.</p>
 
     <!-- Main content (shown by default) -->
     <div id="main-content">
