--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
         <span class="separator">|</span>
         <a href="#" onclick="showSection('resume')">resume</a>
         <span class="separator">|</span>
-        <a href="#" onclick="showSection('socials')">socials</a>
+        <a href="#" onclick="showSection('contact')">socials</a>
       </div>
     </div>
 
