mobile behavior fix

--- a/index.html
+++ b/index.html
@@ -245,6 +245,37 @@
       .resume-item {
         padding-left: 15px;
       }
+
+      /* Mobile image container adjustments */
+      .home-image-container {
+        margin: 0 20px 20px 20px !important;
+      }
+
+      .home-image {
+        max-width: 100% !important;
+        width: 100% !important;
+      }
+
+      .home-intro-box {
+        margin: 20px 20px !important;
+        padding: 12px !important;
+        font-size: 10pt !important;
+      }
+
+      .home-content {
+        padding: 15px 0 !important;
+      }
+    }
+
+    /* Tablet responsive */
+    @media (max-width: 900px) and (min-width: 601px) {
+      .home-image-container {
+        margin: 0 50px 20px 50px;
+      }
+
+      .home-intro-box {
+        margin: 20px 50px;
+      }
     }
   </style>
 </head>
