fixing contact section

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
         <span class="separator">|</span>
         <a href="#" onclick="showSection('resume')">resume</a>
         <span class="separator">|</span>
-        <a href="#" onclick="showSection('contact')">socials</a>
+        <a href="#" onclick="showSection('contact')">contact</a>
       </div>
     </div>
 
@@ -315,7 +315,7 @@
             <br><br>
             I'm interested in math, radio, markets, and geopolitics.
             Currently learning about FPGA. In my free
-            time: sailing, reading, music, travel.
+            time I like to sail, read, play music, and travel.
             <br><br>
             Currently Reading: <a
               href="https://en.wikipedia.org/wiki/The_Prize:_The_Epic_Quest_for_Oil,_Money,_and_Power"><i>The
@@ -441,7 +441,7 @@
       </div>
 
       <!-- Socials section -->
-      <div id="socials" class="content-section">
+      <div id="contact" class="content-section">
         <div class="socials-content">
           <ul>
             <li>• <a href="https://linkedin.com/in/robertjsteve" target="_blank" rel="noopener noreferrer">LinkedIn</a>
