--- a/index.html
+++ b/index.html
@@ -384,16 +384,16 @@
 
           <div class="resume-item">
             <h3>Apple</h3>
-            <div class="dates">2025 feb -</div>
+            <div class="dates">2025 feb - 2025 may</div>
             <div class="role">Security Engineer, Red Team</div>
-            <p>Penetration tested apple.com online store services for PII and PCI data. Expertise in Linux, networking,
+            <p>Three month security engagement with the apple.com online store services. Expertise in Linux, networking,
               and reverse engineering with tools like Ghidra and Eclipse MAT. Developed boutique security tooling in
-              Java and Python.</p>
+              Java and Python. Hosted security trainings for engineering teams.</p>
           </div>
 
           <div class="resume-item">
             <h3>Apple</h3>
-            <div class="dates">2022 jul - 2025 feb</div>
+            <div class="dates">2022 jul - 2024 sep</div>
             <div class="role">Software Development Engineer</div>
             <p>Developed big-data apps for demand prediction and supply planning using Python, Go, AWS, Spark, and
               Gurobi.
