--- a/index.html
+++ b/index.html
@@ -288,8 +288,9 @@
       <div class="header-content">
         <a href="#" class="title" onclick="showSection('home')">Robert Steve</a>
         <span class="separator">|</span>
-        <a href="#" onclick="showSection('projects')">projects</a>
+        <!-- <a href="#" onclick="showSection('projects')">projects</a>
         <span class="separator">|</span>
+      -->
         <a href="#" onclick="showSection('writing')">writing</a>
         <span class="separator">|</span>
         <a href="#" onclick="showSection('resume')">resume</a>
@@ -306,7 +307,7 @@
           <div class="home-image-container">
             <img src="lorenz.png" alt="Lorenz Attractor" class="home-image">
             <div class="home-subtitle">
-              generative art and a<a href="https://en.wikipedia.org/wiki/Lorenz_system"> Lorenz attractor</a>, generated
+              Generative art and a<a href="https://en.wikipedia.org/wiki/Lorenz_system"> Lorenz attractor</a>, generated
               in <a href="https://processing.org">Processing</a>.
             </div>
           </div>
