--- a/index.html
+++ b/index.html
@@ -307,8 +307,8 @@
           <div class="home-image-container">
             <img src="lorenz.png" alt="Lorenz Attractor" class="home-image">
             <div class="home-subtitle">
-              Generative art and a<a href="https://en.wikipedia.org/wiki/Lorenz_system"> Lorenz attractor</a>, generated
-              in <a href="https://processing.org">Processing</a>.
+              Generative art and a<a href="https://en.wikipedia.org/wiki/Lorenz_system"> Lorenz attractor</a>, made with
+              <a href="https://processing.org">Processing</a>.
             </div>
           </div>
           <div class="home-intro-box">
